Fixed manifest file

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "permissions": [
         "webNavigation",
         "tabs",
-        "<all_urls>",
+        "<all_urls>"
     ],
     "version": "0.0.1",
     "background": {
